--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Adam Kim"
-  avatar           : "Profile.jpg"
+  avatar           : ""
   bio              : "Understanding gene expression in liver disease"
   location         : "Cleveland, OH
   pubmed           : "https://www.ncbi.nlm.nih.gov/myncbi/1614iFHJu5aQl/bibliography/public/"
