--- a/_config.yml
+++ b/_config.yml
@@ -80,10 +80,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Adam Kim"
-  avatar           : ""
+  name             : 
+  avatar           : "Profile.jgp"
   bio              : "Understanding gene expression in liver disease"
-  location         : "Cleveland, OH
+  location         : "Cleveland, OH"
   pubmed           : "https://www.ncbi.nlm.nih.gov/myncbi/1614iFHJu5aQl/bibliography/public/"
   googlescholar    : "https://scholar.google.com/citations?user=XueDt9cAAAAJ&hl=en"
   email            :
