--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   github           : "atomadam2"
   google_plus      :
   keybase          :
-  instagram        : "https://www.instagram.com/atomadam2/"
+  instagram        : "atomadam2"
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         :
